// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackSignup Appraisal should match snaptshot 1`] = `
<styled.div>
  <styled.div>
     Quase acabando! 
  </styled.div>
  <styled.div>
     Estamos conferindo os dados informados, leva só alguns instantes. ;) 
  </styled.div>
  <Loader />
</styled.div>
`;

exports[`FeedbackSignup Error should match snaptshot 1`] = `
<Feedback
  btnTxt="Alterar"
  icon="ERROR"
  onclick={[Function]}
  text="Confirme se a Data de Nascimento e o número de telefone estão corretos. Caso não esteja, realize a alteração."
  title="Ops! Confira os dados"
/>
`;

exports[`FeedbackSignup Success should match snaptshot 1`] = `
<Feedback
  btnTxt="Continuar"
  icon="SUCCESS"
  onclick={[Function]}
  text="Agora seu cliente receberá um token para validar o celular informado. ;) "
  title="Dados verificados com sucesso!"
/>
`;

exports[`FeedbackSignup Warning should match snaptshot 1`] = `
<Feedback
  btnTxt="Alterar"
  icon="WARNING"
  onclick={[Function]}
  text="Se o telefone utilizado pertence à loja/estabelecimento, alterar o telefone."
  title="Ops! Confira os dados"
/>
`;

exports[`FeedbackSignup should match snaptshot 1`] = `
Array [
  <div
    class="dtccwe"
  >
    <img
      class="bfFoYY"
      src="SvgrURL"
    />
  </div>,
  <div
    class="bNyUfp"
  >
    <div
      class="kEaUGk"
    >
      <div
        class="cquwcG"
      >
         Quase acabando! 
      </div>
      <div
        class="kGOuSw"
      >
         Estamos conferindo os dados informados, leva só alguns instantes. ;) 
      </div>
      <div
        class="dVqbqG"
      >
        <div />
      </div>
    </div>
    <div
      style="display:flex;gap:80px;margin:20px"
    >
      <button
        class="fNhGOU"
      >
         Sucesso 
      </button>
      <button
        class="fNhGOU"
      >
          Erro 
      </button>
      <button
        class="fNhGOU"
      >
          AVISO 
      </button>
    </div>
  </div>,
]
`;
